--- a/src/main/resources/META-INF/neoforge.mods.toml
+++ b/src/main/resources/META-INF/neoforge.mods.toml
@@ -6,7 +6,7 @@ license = "MIT License"
 [[mods]]
 modId = "cobblehome_neoforge"
 version = "${version}"
-displayName = "Cobblemon NeoForge Template Sidemod"
+displayName = "Cobblehome"
 authors = "Heitor Maciel"
 description = '''
 Simple Client-Side Home for Cobblemon
